# FIML

./: .dockerignore  .editorconfig  .env.example  .env.production  .env.production.example  .gitignore  AGENT_WORKFLOWS_SUMMARY.md  AI_FIX_PROMPTS.md  ARCHITECTURE.md  BLUEPRINT.md  BUILD_SUMMARY.md  CACHE_ENHANCEMENTS_SUMMARY.md  CHANGELOG.md  CI_PIPELINE_BREAKUP_SUMMARY.md  CI_WORKFLOW_STRUCTURE.md  COMPLETION_NOTICE.md  CONTRIBUTING.md  DASHBOARD_ALERTS_IMPLEMENTATION_SUMMARY.md  DASHBOARD_ALERTS_QUICK_REFERENCE.md  DEPLOYMENT.md  DOCS_CONSOLIDATION_COMPLETE.md  DOCUMENTATION_REFACTOR_SUMMARY.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LIVE_TEST_SUMMARY.md  MCP_NARRATIVE_INTEGRATION_SUMMARY.md  Makefile  NARRATIVE_GENERATION_SUMMARY.md  NEW_PROVIDERS_SUMMARY.md  PHASE1_100_PERCENT_COMPLETE.md  PHASE1_CONTENT_SUMMARY.md  PHASE1_FINAL_VERIFICATION.md  PHASE1_SPRINT1_SUMMARY.md  PHASE1_TEST_COVERAGE_SUMMARY.md  PHASE2_REVIEW_SUMMARY.md  PHASE2_SETUP.md  PHASE2_SUMMARY.md  PHASE2_TODO.md  (+34 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
benchmarks/: BENCHMARK_RESULTS.md  README.md  __init__.py  bench_arbitration.py  bench_cache.py  bench_cache_optimizations.py  bench_components.py  bench_core.py  bench_dsl.py  bench_mcp.py  bench_providers.py  conftest.py
config/: prometheus.yml
docs/: CACHE_ARCHITECTURE.md  CACHE_ENHANCEMENTS.md  CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_OPTIMIZATION.md  CACHE_OPTIMIZATIONS.md  CACHE_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_CONSOLIDATION.md  LEGAL_COMPLIANCE_COMPLETE.md  PRE_PUSH_HOOK.md  PRODUCTION_DEPLOYMENT.md  PROVIDERS.md  README.md  TESTING.md  UPDATE_MIGRATION_STRATEGY.md  WEBSOCKET.md  WEBSOCKET_SUMMARY.md  index.md  llms-full.txt  llms.txt
examples/: agent_workflows_demo.py  basic_usage.py  bot_demo.py  dashboard_alerts_demo.py  lesson_content_demo.py  lesson_version_migration_demo.py  mcp_narrative_demo.py  narrative_demo.py  session_demo.py  watchdog_demo.py  websocket_demo.py  websocket_streaming.py
fiml/: __init__.py  server.py
fiml-mobile/: README.md  app.json  babel.config.js  constants.ts  package-lock.json  package.json  providers.ts  tailwind.config.js  tsconfig.json
k8s/: deployment.yaml
narrative_templates/: README.md
scripts/: README.md  dev-setup.sh  init-db.sql  install-hooks.sh  load_test_cache.py  (+6 more)
(+412 files in other folders)
