[project]
name = "fiml"
version = "0.1.0"
description = "Financial Intelligence Meta-Layer - AI-Native Multi-Market Financial Framework"
authors = [{name = "FIML Team"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core MCP & Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "starlette>=0.36.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # Async & Concurrency
    "asyncio>=3.4.3",
    "aiohttp>=3.9.1",
    "httpx>=0.26.0",
    
    # Data Providers
    "yfinance>=0.2.35",
    "ccxt>=4.2.0",
    "alpha-vantage>=2.3.1",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28",
    "pandas-ta>=0.3.14b",
    
    # Cache & Database
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    "psycopg[binary]>=3.1.16",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    
    # Task Queue & Orchestration
    "celery>=5.3.6",
    "ray[default]>=2.9.0",
    "temporal-sdk>=1.5.0",
    
    # Event Streaming
    "kafka-python>=2.0.2",
    "aiokafka>=0.10.0",
    
    # DSL & Parsing
    "lark>=1.1.9",
    
    # ML & Analytics
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.40.0",
    "structlog>=24.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "isort>=5.13.2",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
